[gd_scene load_steps=8 format=3 uid="uid://bnojsoxagacoj"]

[ext_resource type="Shape2D" path="res://Assets/cube.tres" id="1"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_06ggq"]
[ext_resource type="Texture2D" uid="uid://c3gmwaa5aedxh" path="res://Assets/player.png" id="3_lto8g"]
[ext_resource type="Texture2D" uid="uid://bqtnfkmias0dd" path="res://Assets/ball.png" id="4_2lric"]
[ext_resource type="Texture2D" uid="uid://bqr7sqo4h73tb" path="res://Assets/ship.png" id="4_qbp78"]
[ext_resource type="AudioStream" uid="uid://chi3x2sqxury5" path="res://Assets/sfx/death_sound.mp3" id="6_6ipy7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a8ao1"]
size = Vector2(16, 16)

[node name="CharacterBody2D" type="CharacterBody2D" groups=["Player"]]
texture_filter = 1
collision_mask = 2
slide_on_ceiling = false
floor_constant_speed = true
floor_max_angle = 1.309
platform_on_leave = 2
script = ExtResource("1_06ggq")
gravity_reverse = false

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_a8ao1")

[node name="DetectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = ExtResource("1")

[node name="Sprites" type="Node2D" parent="."]

[node name="cube" type="Sprite2D" parent="Sprites"]
texture = ExtResource("3_lto8g")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="ball" type="Sprite2D" parent="Sprites"]
visible = false
scale = Vector2(1.1, 1.1)
texture = ExtResource("4_2lric")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="ship" type="Sprite2D" parent="Sprites"]
visible = false
position = Vector2(5.96046e-08, -5.96046e-08)
scale = Vector2(1.605, 1.605)
texture = ExtResource("4_qbp78")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="ShipCube" type="Sprite2D" parent="Sprites/ship"]
z_index = -1
position = Vector2(0.623, -2)
scale = Vector2(0.358645, 0.345016)
texture = ExtResource("3_lto8g")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Respawn" type="Timer" parent="."]
one_shot = true

[node name="DeathSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_6ipy7")
bus = &"SFX"

[node name="OrbBuffering" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="BallBuffering" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="DetectArea" to="." method="_on_detect_area_area_entered"]
[connection signal="area_exited" from="DetectArea" to="." method="_on_detect_area_area_exited"]
[connection signal="timeout" from="Respawn" to="." method="_on_respawn_timeout"]
